k8s/apps/default/wizarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  labels:
    app.kubernetes.io/name: wizarr
    app.kubernetes.io/instance: wizarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wizarr
    app.kubernetes.io/instance: wizarr
  ports:
    - name: web
      targetPort: web
      port: 80
