k8s/apps/default/wizarr/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wizarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wizarr
      app.kubernetes.io/instance: wizarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
              app.kubernetes.io/component: proxy
              gateway: external
      ports:
        - protocol: TCP
          port: web
